--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@
 */
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
 
+.two-columns {
+    -o-column-count: 2;
+    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
+    column-count: 2;
+}
+
 #loading {
    width: 100%;
    height: 100%;
@@ -28,7 +35,6 @@ body{
     font-size: 14px;
     margin-top: 70px; 
     height: 100%;
-    
 }
 
 .italic-blue{
@@ -207,7 +213,7 @@ body{
     padding-right:10px;
     width: 100%;
 }
-.index-acceso .index-acceso-body-link > img{
+.index-acceso .index-acceso-body-link > a > img{
     height: 33px;
     
 }
@@ -217,7 +223,7 @@ body{
     color: #7FB942;
     text-align: center
 }
-.index-acceso .index-acceso-title > img{
+.index-acceso .index-acceso-title > a > img{
     
     padding:10px;
     max-width: 87px;
@@ -308,7 +314,24 @@ body{
     height: 70px;
 }
 
+/*
+@media (max-width: 1023px){
+    .two-columns{
+        o-column-count: 1;
+    -webkit-column-count: 1; 
+    -moz-column-count: 1;
+    column-count: 1;
+        
+    }
+}
+*/
+
 @media (max-width: 767px) {
+    
+    .oculto-responsivo{
+        display: none;
+    }
+    
     .navbar-nav > li > a {
         height: 40px;
         padding-top: 7px;
