Terminada y en Producción

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     Created on : 05-ago-2015, 10:33:40
     Author     : Rogelio Vargas
 */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
+//@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
 
 .two-columns {
     -o-column-count: 2;
